--- a/css/main.css
+++ b/css/main.css
@@ -512,40 +512,39 @@ header.home {
   .main {
     float: right;
     overflow: scroll; } }
-.main .tabs {
-  margin-bottom: 2em; }
-  @media screen and (min-width: 50em) {
-    .main .tabs {
-      margin-bottom: 0; } }
+@supports (display: flex) {
+  .main .tabs {
+    display: flex; } }
+.main .tabs a {
+  background: #161a2a;
+  font: 600 1rem/1 effra, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  color: #405399;
+  width: 50%;
+  display: block;
+  float: left;
+  text-align: center;
+  padding: 1.25em 0;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
   @supports (display: flex) {
-    .main .tabs {
-      display: flex; } }
-  .main .tabs a {
-    background: #161a2a;
-    font: 600 1rem/1 effra, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-    color: #405399;
-    width: 50%;
-    display: block;
-    float: left;
-    text-align: center;
-    padding: 1.25em 0;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease; }
-    @supports (display: flex) {
-      .main .tabs a {
-        float: none; } }
-    .main .tabs a:hover {
-      background: #4a90e2;
-      color: white; }
-    .main .tabs a.selected {
-      color: white; }
+    .main .tabs a {
+      float: none; } }
+  .main .tabs a:hover {
+    background: #4a90e2;
+    color: white; }
+  .main .tabs a.selected {
+    color: white; }
 
 .posts {
   margin: 0;
   padding: 0;
-  list-style: none; }
+  list-style: none;
+  margin-top: 2em; }
+  @media screen and (min-width: 50em) {
+    .posts {
+      margin-bottom: 0; } }
   .posts h2 {
     font: 1.375em/1.375 "garamond-premier-pro", serif;
     color: #06113a;
